--- a/vite-exam-project/src/style.css
+++ b/vite-exam-project/src/style.css
@@ -44,17 +44,15 @@ body {
   flex: 1;
   padding: 10px;
   border: 1px solid #5a5a5a;
-  border-radius: 3px;
   background-color: #ffffff;
   color: #000000;
 }
 
 .todo-form button {
-  padding: 10px;
+  padding: 14px;
   border: none;
   background: #28a745;
   color: #fff;
-  border-radius: 3px;
   cursor: pointer;
 }
 
@@ -69,18 +67,18 @@ body {
   border-bottom: 1px solid #555;
   display: flex;
   align-items: center;
+  justify-content: center;
   color: #242424;
 }
 
 .todo-item input[type="radio"] {
   margin-right: 10px;
-  width: 20px; /* Make the radio button larger */
+  width: 20px;
   height: 20px;
 }
 
 .todo-item span {
   flex-grow: 1;
-  margin-left: 10px;
 }
 
 .completed {
@@ -93,7 +91,7 @@ body {
   border: none;
   color: #fff;
   cursor: pointer;
-  font-size: 25px; /* Increase the icon size */
+  font-size: 25px;
 }
 
 .edit-btn {
@@ -101,7 +99,7 @@ body {
   border: none;
   color: #fff;
   cursor: pointer;
-  font-size: 20px; /* Increase the icon size */
+  font-size: 20px;
 }
 
 .remove-btn i {
@@ -128,16 +126,14 @@ body {
   display: none;
 }
 
-/* style.css */
 
 .complete-radio {
   margin-right: 10px;
-  width: 20px; /* Increase size */
+  width: 20px; 
   height: 20px;
   cursor: pointer;
 }
 
-/* Strike-through text when completed */
 .completed {
   text-decoration: line-through;
   color: #888;
